--- a/client/assets/css/app.css
+++ b/client/assets/css/app.css
@@ -16,6 +16,13 @@ html {
     margin-top: -102px;"
 }
 
+.scanner_background_2 {
+    background-size: cover;
+    background: url('../images/scanner_bg_2.png') no-repeat center center;
+    height: 720px;
+    margin-top: -150px;"
+}
+
 #loading {
     width: 100%;
     height: 100%;
